# argentus

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: database.py  main.py
app/models/: user.py
app/routers/: auth.py  example.py
app/schemas/: user.py
app/services/: authentication.py  crud.py
scripts/: deploy-scripts.sh
