[tool.poetry]
name = "argentus"
version = "0.1.0"
description = "A FastAPI boilerplate with routes"
authors = ["Bruno Peixoto <brunolnetto@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
SQLAlchemy = "^2.0.21"
databases = "^0.8.0"
passlib = "^1.7.4"
python-jose = {extras = ["openssl"], version = "^3.3.0"}
pydantic = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
